# TradingApp

Chart-Prophet/: app.py  chart_analyzer.py  models.py  pyproject.toml  replit.md
Chart-Prophet/static/: app.js  history.js  style.css
Chart-Prophet/templates/: history.html  index.html
